--- a/package.json
+++ b/package.json
@@ -1,48 +1,139 @@
 {
-  "name": "koa-views",
-  "version": "5.0.1",
+  "name": "magnet-views",
+  "version": "0.1.0",
   "description": "Template rendering middleware for koa",
-  "main": "index.js",
+  "keywords": [
+    "app-wide",
+    "koa",
+    "render",
+    "templates",
+    "templating",
+    "views"
+  ],
+  "bugs": {
+    "url": "https://github.com/Magnetjs/magnet-views/issues"
+  },
+  "license": "MIT",
+  "author": "Kieve Chua <kievechua@gmail.com>",
+  "files": [
+    "README",
+    "CHANGELOG.md",
+    "dist",
+    "index.js"
+  ],
+  "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Magnetjs/magnet-views"
+  },
   "scripts": {
+    "build": "babel src --out-dir dist --source-maps",
     "lint": "eslint .",
-    "test": "mocha --reporter dot --bail"
+    "start": "babel src --out-dir dist",
+    "test": "mocha --reporter dot --bail",
+    "watch": "nodemon --ignore dist --exec \"babel src --out-dir dist --source-maps\"",
+    "watch-all": "concurrently \"npm run watch\" \"npm run watch-test\"",
+    "watch-test": "nodemon --delay 0.5 --ignore src --exec babel-node tests/index.js | tap-spec"
+  },
+  "babel": {
+    "plugins": [
+      "transform-async-to-generator"
+    ],
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true,
+      "mocha": true
+    },
+    "extends": "eslint-config-airbnb",
+    "globals": {
+      "__DEVELOPMENT__": true,
+      "__CLIENT__": true,
+      "__SERVER__": true,
+      "__DISABLE_SSR__": true,
+      "__DEVTOOLS__": true,
+      "socket": true,
+      "webpackIsomorphicTools": true
+    },
+    "plugins": [
+      "import"
+    ],
+    "rules": {
+      "react/jsx-uses-react": 2,
+      "react/jsx-uses-vars": 2,
+      "react/react-in-jsx-scope": 2,
+      "react/jsx-quotes": 0,
+      "react/no-multi-comp": 0,
+      "import/default": 0,
+      "import/no-duplicates": 0,
+      "import/named": 0,
+      "import/namespace": 0,
+      "import/no-unresolved": 0,
+      "import/no-named-as-default": 2,
+      "jsx-quotes": 2,
+      "block-scoped-var": 0,
+      "padded-blocks": 0,
+      "comma-dangle": 0,
+      "indent": [
+        2,
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "no-console": 0,
+      "no-alert": 0
+    },
+    "settings": {
+      "import/parser": "babel-eslint",
+      "import/resolve": {
+        "moduleDirectory": [
+          "node_modules",
+          "src"
+        ]
+      }
+    }
   },
   "dependencies": {
     "@f/defaults": "^1.0.1",
+    "co": "^4.6.0",
     "consolidate": "^0.14.0",
     "debug": "^2.1.3",
-    "koa-send": "^3.1.0"
+    "koa-convert": "^1.2.0",
+    "koa-send": "^3.1.0",
+    "koa-views": "^4.1.0",
+    "lodash": "^4.11.1",
+    "magnet-core": "^1.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
+    "babel-plugin-transform-async-to-generator": "^6.7.0",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "concurrently": "^2.0.0",
     "ejs": "^2.4.1",
-    "eslint": "^2.2.0",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^7.0.0",
     "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-import": "^1.1.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
     "jade": "^1.9.2",
     "koa": "^2.0.0-alpha.3",
     "mocha": "^2.2.4",
+    "nodemon": "^1.9.1",
     "should": "^7.0.2",
     "supertest": "^1.0.1",
     "tap-spec": "^4.1.1",
-    "tape": "^4.4.0",
+    "tape": "^4.5.1",
     "underscore": "^1.8.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/queckezz/koa-views"
-  },
-  "keywords": [
-    "koa",
-    "render",
-    "views",
-    "app-wide",
-    "templating",
-    "templates"
-  ],
-  "author": "queckezz",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/queckezz/koa-views/issues"
   }
 }
